--- a/fatima.css
+++ b/fatima.css
@@ -448,11 +448,15 @@ footer>div{
         width: 4rem;
     }
     #mobile-menu{
-        display: none;
-        /* background-color: #081120 ; */
+        position: fixed;
+        display: block;
+        opacity: 0;
+        background-color: #081120 ;
         height: 100vh;
         z-index: 2;
         width: 100%;
+        transition: all 1s ease;
+        transform: translateY(-100vh);
     }
     #mobile-menu>ul{
         padding: 10rem 2rem;
@@ -484,6 +488,7 @@ footer>div{
         width: 3rem;
         height: 1px;
         margin-bottom: 1rem;
+        transition: all 0.5s ease;
     }
 
     /* Section titles */
@@ -626,7 +631,8 @@ footer>div{
         color:#D3F500;
         padding: 2rem;
         background: #0D172899;
-        margin-left: 2rem;
+        margin-right: 2rem;
+        margin-left: 0;
     }
     .service-box:hover{
         transform: rotate(-90deg);
