--- a/fatima.css
+++ b/fatima.css
@@ -223,15 +223,16 @@ header{
     background: #0D1728;
     padding: 7rem 4.5rem;
     color:white; 
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 15% 35% 50%
 }
 #section-2-service-stat{
     display: flex;
     justify-content: space-between;
+    width: 80%;
 }
 iframe{
-    width: 70rem;
+    width: 100%;
     height: 50rem;
     border: solid 0.2rem #081120;
     border-radius: 1.2rem 1.2rem 0 0;
