--- a/fatima.css
+++ b/fatima.css
@@ -162,14 +162,14 @@ header{
     font-size: 13.5rem;
 }
 #side-yellow{
-    width: 40rem;
-    height: 4rem;
+    width: 45rem;
+    height: 6rem;
     background: #D3F500;
     border-radius: 4rem;
-    position: absolute;
+    position: relative;
     transform: rotate(15deg);
     margin-left: -5rem;
-    bottom: -25%;
+    bottom:275;
 }
 
 /* Section Two */
@@ -224,7 +224,8 @@ header{
     padding: 7rem 4.5rem;
     color:white; 
     display: grid;
-    grid-template-columns: 15% 35% 50%
+    grid-template-columns: 15% 35% 50%;
+    column-gap: 1rem;
 }
 #section-2-service-stat{
     display: flex;
@@ -636,10 +637,9 @@ footer>div{
         margin-left: 0;
     }
     .service-box:hover{
-        transform: rotate(-90deg);
-        transform-origin: left left;
-        width: 40rem;
-        height: 40rem;
+        transform: rotate(0deg);
+        width: 30rem;
+        height: 30rem;
     }
     .service-box-image{
         transform: rotate(0deg);
