--- a/fatima.css
+++ b/fatima.css
@@ -150,7 +150,11 @@ header{
     justify-content: space-between;
     padding-right: 1rem;
 }
-#section-1>p{
+hr{
+    margin-left: -12rem;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+}
+#main-text{
     font-size: 13.5rem;
     padding: 5rem 0 5rem 12rem;
     position: relative;
@@ -158,7 +162,7 @@ header{
     bottom: 150;
     line-height: 14rem;
 }
-#section-1>p>span{
+#main-text>span{
     font-size: 13.5rem;
 }
 #side-yellow{
@@ -264,19 +268,37 @@ iframe{
     margin-left: auto;
     margin-right: auto;
 }
-.profile{
+.left-profile{
     display: flex;
     align-items: center;
     margin-bottom: 3rem;
     pointer-events: none;
 }
-.profile>div>p{
+.left-profile>div>p{
     text-align: left;
     font-size: 1.4rem;
     margin-left: 1rem;
     margin-bottom: 1rem;
     opacity: 0;
-    transform: translateX(-10rem);
+    transition: all 0.5s ease;
+}
+.right-profile{
+    display: flex;
+    align-items: center;
+    margin-bottom: 3rem;
+    pointer-events: none;
+    transition: all 0.5s ease;
+}
+.right-profile>div>img{
+    padding-left: 300%;
+    transition: all 0.5s ease;
+}
+.right-profile>div>p{
+    text-align: left;
+    font-size: 1.4rem;
+    margin-left: 1rem;
+    margin-bottom: 1rem;
+    opacity: 0;
     transition: all 0.5s ease;
 }
 .profile-text{
@@ -297,7 +319,6 @@ iframe{
     width: 75%;
     margin-bottom: 7rem;
 }
-
 
 /* Section 6 */
 #section-6{
@@ -510,14 +531,17 @@ footer>div{
     #section-1{
         padding-top: 10rem;
     }
-    #section-1>p{
+    #main-text{
         font-size: 5rem;
         padding: 2rem;
         position: static;
         line-height: 5rem;
     }
-    #section-1>p>span{
+    #main-text>span{
         font-size: 5rem;
+    }
+    hr{
+        display: none;
     }
 
 
@@ -585,10 +609,10 @@ footer>div{
         display:block;
         padding: 0;
     }
-    .profile{
+    .left-profile{
         margin-bottom: 1rem;
     }
-    .profile>div>p{
+    .left-profile>div>p{
         opacity: 1;
         transform: translateX(0rem);
     }
@@ -597,6 +621,12 @@ footer>div{
         line-height: 2.4rem;
         opacity: 1;
         margin-bottom: 3rem;
+    }
+    .right-profile>div>img{
+        padding-left: 0;
+    }
+    .right-profile>div>p{
+        opacity: 1;
     }
     #section-5-flex-2{
         width: 100%;
